<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<ImageView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:src="@drawable/main_logo"
	    />
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/appName"
		/>
	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TableRow>
			<TextView
				android:text="@string/search"
			/>
			<EditText
				android:id="@+id/searchBar"
			/>
			<Button
				android:id="@+id/searchButton"
				android:text="@string/search"
			/>
		</TableRow>
		<TableRow>
			<TextView
				android:text="@string/position"
			/>
			<Spinner
				android:id="@+id/positionSpinner"
				android:prompt="@string/positionPrompt"
			/>
		</TableRow>
		<TableRow>
			<TextView
				android:text="@string/team"
			/>
			<Spinner
				android:id="@+id/teamSpinner"
				android:prompt="@string/teamPrompt"
			/>
		</TableRow>
		<TableRow>
			<TextView
				android:text=""
			/>
			
			<Button
				android:id="@+id/aboutButton"
				android:text="@string/about"
				/>
		</TableRow>
	</TableLayout>
</LinearLayout>
